--- a/src/docs/components.yml
+++ b/src/docs/components.yml
@@ -39,6 +39,34 @@ components:
         refresh:
           $ref: '#/components/schemas/Token'
 
+    Book:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        author:
+          type: string
+        price:
+          type: string
+        isbn: 
+          type: string
+        language: 
+          type: string
+        numberOfPages:
+          type : number
+        publisher:
+          type : string
+      example:
+        id: 5ebac534954b54139806c112
+        title: war and peace
+        author: fake name
+        isbn: user
+        language: user
+        numberOfPages: user
+        publisher: user
+
     Error:
       type: object
       properties:
